# attendance

./: CHANGELOG.md  README.md  attendance.cabal
src/: Attendance.hs
src/Attendance/: Internal.hs
