cabal-version:      2.4
name:               attendance
version:            0.0
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com
synopsis:           Reveal why your traversal doesn't point anything

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Attendance
        Attendance.Internal

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.9 && <5, lens, prettyprinter, profunctors
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat
